administration 1.3 with email confirmation

--- a/src/UserBundle/Resources/config/doctrine/User.orm.yml
+++ b/src/UserBundle/Resources/config/doctrine/User.orm.yml
@@ -15,6 +15,8 @@ UserBundle\Entity\User:
             type: string
         birthday:
               type: datetime
+        token:
+              type: string
         gender:
             type: string
     lifecycleCallbacks: { }
