--- a/src/ConfigurationBundle/Resources/config/services.yml
+++ b/src/ConfigurationBundle/Resources/config/services.yml
@@ -2,3 +2,5 @@ services:
     configuration_db:
         class: ConfigurationBundle\Service\CheckTable
 #        arguments: ["@service_id", "plain_value", "%parameter%"]
+    create_users:
+        class: ConfigurationBundle\Service\CreateUsers
