--- a/src/UserBundle/Resources/config/doctrine/User.orm.yml
+++ b/src/UserBundle/Resources/config/doctrine/User.orm.yml
@@ -19,4 +19,8 @@ UserBundle\Entity\User:
               type: string
         gender:
             type: string
+    oneToMany:
+      users:
+        targetEntity: Users
+        mappedBy: user
     lifecycleCallbacks: { }
