--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -89,5 +89,33 @@ assetic:
     filters:
         cssrewrite: ~
 
+hwi_oauth:
+    connect:
+        confirmation: true
+        registration_form:  fos_user.registration.form.factory
+    firewall_names: [main]
+    fosub:
+        username_iterations: 30
+        properties:
+          facebook: facebook_id
+    # list of names of the firewalls in which this bundle is active, this setting MUST be set
+    resource_owners:
+        facebook:
+            type:                facebook
+            client_id:           137743936812645
+            client_secret:       4394b361d175800d8b5e2d2eea2423d0
+            scope:               'email'
+            options:
+                display: popup #dialog is optimized for popup window
+        vkontakte:
+             type:  vkontakte
+             client_id:  6126297
+             client_secret:  Y1cVWOhvP7SDVnqI8iY2
+services:
+    hwi_oauth.user.provider.entity:
+        class: HWI\Bundle\OAuthBundle\Security\Core\User\OAuthUserProvider
 
+    my.custom.user_provider:
+            class:        UserBundle\Security\Core\User\UserFOSUBUserProvider
+            arguments: ['@fos_user.user_manager', { facebook: facebook_id }]
 
