--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,3 +1,27 @@
+hwi_oauth_redirect:
+    resource: "@HWIOAuthBundle/Resources/config/routing/redirect.xml"
+    prefix:   /connect
+
+hwi_oauth_connect:
+    resource: "@HWIOAuthBundle/Resources/config/routing/connect.xml"
+    prefix:   /connect
+
+hwi_oauth_login:
+    resource: "@HWIOAuthBundle/Resources/config/routing/login.xml"
+    prefix:   /connect
+
+facebook_login:
+    path: /login/check-facebook
+
+vkontakte_login:
+    path: /login/check-vkontakte
+
+custom_login:
+    path: /login/check-custom
+
+github_login:
+    path: /login/check-github
+
 configuration:
     resource: "@ConfigurationBundle/Resources/config/routing.yml"
     prefix:   /
@@ -8,6 +32,3 @@ user:
 
 fos_user:
     resource: "@FOSUserBundle/Resources/config/routing/all.xml"
-
-
-
