--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -2,38 +2,43 @@
 # https://symfony.com/doc/current/security.html
 security:
     encoders:
-        FOS\UserBundle\Model\UserInterface: bcrypt
-    # https://symfony.com/doc/current/security.html#b-configuring-how-users-are-loaded
-
+            FOS\UserBundle\Model\UserInterface: bcrypt
     role_hierarchy:
-        ROLE_ADMIN:       ROLE_USER
-        ROLE_SUPER_ADMIN: ROLE_ADMIN
-
+            ROLE_ADMIN:       ROLE_USER
+            ROLE_SUPER_ADMIN: ROLE_ADMIN
     providers:
-        fos_userbundle:
-            id: fos_user.user_provider.username
-        in_memory:
-            memory:
-                users:
-                    ryan:
-                        password: ryanpass
-                        roles: 'ROLE_USER'
-                    admin:
-                        password: kitten
-                        roles: 'ROLE_ADMIN'
-
+            fos_userbundle:
+                id: fos_user.user_provider.username
+            in_memory:
+                memory:
+                    users:
+                        ryan:
+                            password: ryanpass
+                            roles: 'ROLE_USER'
+                        admin:
+                            password: kitten
+                            roles: 'ROLE_ADMIN'
     firewalls:
-         main:
-                    pattern: ^/
-                    form_login:
-                        provider: fos_userbundle
-                        csrf_token_generator: security.csrf.token_manager
+        main:
+             pattern: ^/
+             form_login:
+                provider: fos_userbundle
+                csrf_token_generator: security.csrf.token_manager
+             oauth:
+                resource_owners:
+                    facebook:           "/login/check-facebook"
+                    vkontakte:  "/login/check-vkontakte"
+                login_path:        /connect
+                use_forward:       true
+                failure_path:      /connect
 
-                    logout:       true
-                    anonymous:    true
+                oauth_user_provider:
+                    service: my.oauth_aware.user_provider.service
+             logout:       true
+             anonymous:    true
+
     access_control:
-            - { path: ^/login$, role: IS_AUTHENTICATED_ANONYMOUSLY }
-            - { path: ^/register, role: IS_AUTHENTICATED_ANONYMOUSLY }
-            - { path: ^/resetting, role: IS_AUTHENTICATED_ANONYMOUSLY }
-            - { path: ^/admin/, role: ROLE_ADMIN }
-
+        - { path: ^/login, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/register, role: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/resetting, role: IS_AUTHENTICATED_ANONYMOUSLY }
+#        - { path: ^/admin/, role: ROLE_ADMIN }
