Registration with Facebook

--- a/src/UserBundle/Resources/config/doctrine/User.orm.yml
+++ b/src/UserBundle/Resources/config/doctrine/User.orm.yml
@@ -11,13 +11,17 @@ UserBundle\Entity\User:
     fields:
         name:
             type: string
+            nullable: true
         surname:
             type: string
+            nullable: true
         birthday:
               type: datetime
+              nullable: true
         gender:
             type: string
-        facebookID:
+            nullable: true
+        facebook_id:
             type: string
             nullable: true
         facebookAccessToken:
