--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -8,7 +8,7 @@ hwi_oauth_connect:
 
 hwi_oauth_login:
     resource: "@HWIOAuthBundle/Resources/config/routing/login.xml"
-    prefix:   /connect
+    prefix:   /login
 
 facebook_login:
     path: /login/check-facebook
